hphp/hack/test/typecheck/union/generics.php.like_types.exp
File "generics.php--file2.php", line 68, characters 3-13:
  exact A<int>
File "generics.php--file2.php", line 71, characters 3-13:
  (exact A<[unresolved]> | exact A<[unresolved]>)
File "generics.php--file2.php", line 74, characters 3-13:
  (exact A<int> | exact A<[unresolved]>)
File "generics.php--file2.php", line 77, characters 3-13:
  exact B<int>
File "generics.php--file2.php", line 80, characters 3-13:
  (exact B<[unresolved]> | exact B<[unresolved]>)
File "generics.php--file2.php", line 83, characters 3-13:
  (exact A<int> | A<~int>)
File "generics.php--file2.php", line 86, characters 3-13:
  (exact A<[unresolved]> | A<~int>)
File "generics.php--file2.php", line 89, characters 3-13:
  (exact A<[unresolved]> | A<T>)
  where T super dynamic
File "generics.php--file2.php", line 92, characters 3-13:
  (exact A<int> | A<T>)
  where T super dynamic
File "generics.php--file2.php", line 95, characters 3-13:
  (A<T> | A<~int>)
  where T super dynamic
File "generics.php--file2.php", line 98, characters 3-13:
  A<T>
  where T super dynamic
File "generics.php--file2.php", line 101, characters 3-13:
  (exact A<int> | exact A<string>)
File "generics.php--file2.php", line 102, characters 3-35:
  bool
File "generics.php--file2.php", line 105, characters 3-13:
  (exact A<num> | exact A<arraykey>)
File "generics.php--file2.php", line 106, characters 3-34:
  bool
File "generics.php--file2.php", line 109, characters 3-13:
  (exact A<int> | exact B<[unresolved]>)
File "generics.php--file2.php", line 110, characters 3-25:
  bool
File "generics.php--file2.php", line 113, characters 3-13:
  D<~?(int | string)>
File "generics.php--file2.php", line 116, characters 3-13:
  exact D<(int | string)>
File "generics.php--file2.php", line 119, characters 3-13:
  D<~?(int | string)>
File "generics.php--file2.php", line 122, characters 3-13:
  ~E<~int>
File "generics.php--file2.php", line 125, characters 3-13:
  ~?(E<~int> | E<~string>)
File "generics.php--file2.php", line 128, characters 3-13:
  ~F<~?(int | string)>
File "generics.php--file2.php", line 131, characters 3-13:
  ~classname<~C>
File "generics.php--file2.php", line 134, characters 3-13:
  Tu
  where Tu super dynamic, Tu super \C
File "generics.php--file2.php", line 137, characters 3-13:
  (Tv | C)
  where Tv super dynamic, Tv as ~\C
File "generics.php--file2.php", line 140, characters 3-13:
  Tu
  where Tu super dynamic, Tu super \C
File "generics.php--file2.php", line 143, characters 3-13:
  (Tu | Tw)
  where Tu super dynamic, Tu super \C, Tw super dynamic, Tw super \C
File "generics.php--file2.php", line 146, characters 3-13:
  (Tv | Ty)
  where Tv super dynamic, Tv as ~\C, Ty super dynamic, Ty as ~\C
File "generics.php--file2.php", line 22, characters 5-15:
  ~?int
File "generics.php--file2.php", line 25, characters 5-15:
  ~?(int | AA::Tabs)
File "generics.php--file2.php", line 28, characters 5-15:
  ~int
File "generics.php--file2.php", line 31, characters 5-15:
  ~?int
File "generics.php--file2.php", line 67, characters 18-18:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 67, characters 20-22:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 67, characters 33-33:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 67, characters 35-37:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 73, characters 28-28:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 73, characters 30-32:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 76, characters 18-18:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 35, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 35, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 35, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 76, characters 20-22:
Expected int
File "generics.php--file2.php", line 35, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 76, characters 34-34:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 35, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 35, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 35, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 76, characters 36-38:
Expected int
File "generics.php--file2.php", line 35, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 82, characters 26-26:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 82, characters 28-30:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 91, characters 24-24:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 91, characters 26-28:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 100, characters 18-18:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 100, characters 20-22:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 100, characters 33-33:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 100, characters 35-40:
Expected string
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 102, characters 32-33:
Invalid argument (Typing[4110])
File "generics.php--file2.php", line 100, characters 20-22:
Expected int
File "generics.php--file2.php", line 16, characters 36-36:
  via this generic T
File "generics.php--file2.php", line 102, characters 32-33:
But got string
File "generics.php--file2.php", line 104, characters 18-18:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 104, characters 20-22:
Expected num
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 104, characters 33-33:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 104, characters 35-42:
Expected arraykey
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 108, characters 18-18:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 7, characters 9-9:
'T' is a constrained type parameter
File "generics.php--file2.php", line 7, characters 9-9:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 7, characters 9-9:
T is a constrained type parameter
File "generics.php--file2.php", line 108, characters 20-22:
Expected int
File "generics.php--file2.php", line 7, characters 9-9:
But got dynamic
File "generics.php--file2.php", line 115, characters 18-18:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 45, characters 10-10:
'T' is a constrained type parameter
File "generics.php--file2.php", line 45, characters 10-10:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 45, characters 10-10:
T is a constrained type parameter
File "generics.php--file2.php", line 115, characters 20-22:
Expected int
File "generics.php--file2.php", line 45, characters 10-10:
But got dynamic
File "generics.php--file2.php", line 115, characters 34-34:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 45, characters 10-10:
'T' is a constrained type parameter
File "generics.php--file2.php", line 45, characters 10-10:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 45, characters 10-10:
T is a constrained type parameter
File "generics.php--file2.php", line 115, characters 36-41:
Expected string
File "generics.php--file2.php", line 45, characters 10-10:
But got dynamic
File "generics.php--file2.php", line 118, characters 26-26:
Some type constraint(s) here are violated (Typing[4110])
File "generics.php--file2.php", line 45, characters 10-10:
'T' is a constrained type parameter
File "generics.php--file2.php", line 45, characters 10-10:
Some type constraint(s) are violated here
File "generics.php--file2.php", line 45, characters 10-10:
T is a constrained type parameter
File "generics.php--file2.php", line 118, characters 28-33:
Expected string
File "generics.php--file2.php", line 45, characters 10-10:
But got dynamic
